--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+    <title>ELJR</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navigation">
+            <a href="#" class="logo">ELJR</a>
+            <ul class="nav-menu">
+                <li class="nav-item"><a href="#">HOME</a></li>
+                <li class="nav-item"><a href="#">Sobre</a></li>
+                <li class="nav-item"><a href="#">Professores</a></li>
+                <li class="nav-item"><a href="#">Contato</a></li>
+                <li class="nav-item"><a href="#">Turmas</a></li>
+                <i class='bx bx-search'></i>
+            </ul>
+            <div class="menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
