nav bar com css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
     <header>
         <nav class="navigation">
-            <a href="#" class="logo">ELJR</a>
+            <a href="#" class="logo">
+                <img src="img/logo.png" alt="logo" width="100" height="44">
+            </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#">HOME</a></li>
-                <li class="nav-item"><a href="#">Sobre</a></li>
-                <li class="nav-item"><a href="#">Professores</a></li>
-                <li class="nav-item"><a href="#">Contato</a></li>
-                <li class="nav-item"><a href="#">Turmas</a></li>
+                <li class="nav-item"><a href="#">SOBRE</a></li>
+                <li class="nav-item"><a href="#">PROFESSORES</a></li>
+                <li class="nav-item"><a href="#">TURMAS</a></li>
+                <li class="nav-item"><a href="#">CONTATO</a></li>
                 <i class='bx bx-search'></i>
             </ul>
             <div class="menu">
