--- a/index.html
+++ b/index.html
@@ -29,5 +29,18 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="home">
+            <div class="home-text">
+                <h4 class="text-h4">Bem-vindo a Escola de Língua Japonesa do Recife</h4>
+                <h1 class="text-h1">Aprenda Língua e Cultura Japonesa!</h1>
+                <p>2023 já está tocando a campainha. Corre e garanta a sua vaga na melhor escola de Língua Japonesa do Recife! Seu foco é anime? Cultura? Bolsas de estudo? Vem logo então! Início das aula em fevereiro de 2023. Vagas limitadas!</p>
+                <a href="#" class="home-btn">Matricule-se!</a>
+            </div>
+            <div class="home-img">
+                <img src="img/banner.png" alt="banner">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
