--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#">HOME</a></li>
-                <li class="nav-item"><a href="#">SOBRE</a></li>
                 <li class="nav-item"><a href="#">PROFESSORES</a></li>
                 <li class="nav-item"><a href="#">TURMAS</a></li>
-                <li class="nav-item"><a href="#">CONTATO</a></li>
+                <li class="nav-item"><a href="#">BIBLIOTECA</a></li>
+                <li class="nav-item"><a href="#">SOBRE</a></li>
                 <i class='bx bx-search'></i>
             </ul>
             <div class="menu">
@@ -42,5 +42,6 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
